--- a/tmux.conf
+++ b/tmux.conf
@@ -3,15 +3,16 @@ set -g prefix C-t
 bind C-t send-prefix
 
 # ui
-set -g status-style bg="#24283b",fg="#565f89"
-set -g status-left-length 100
-set -g status-left '#S @ #h '
-set -g status-right-length 100
-set -g status-right ' #(TZ="UTC" date +%%a,\ %%b\ %%d\ %%H:%%M\ \(%%Z\))'
-set -g status-justify centre
+set -g status-style bg="#1f2335",fg="#565f89"
+set -g status-left-length 40
+set -g status-left "   [#S]  "
+set -g status-right-length 40
+set -g status-right '#[bg=default,fg=default] 󱑍 #(TZ="UTC" date +%%a,\ %%b\ %%d\ %%H:%%M\ \(%%Z\)) '
+set -g status-justify left
 
-set -g window-status-format ' #I | #W '
-set -g window-status-current-format ' #I | #W#F '
+set -g window-status-format '  #I | #W '
+set -g window-status-style fg="#313750"
+set -g window-status-current-format '  #I | #W #F '
 set -g window-status-current-style fg="#c0caf5",bg="#292e42"
 
 set -g pane-border-style fg="#1f2335"
