--- a/tmux.conf
+++ b/tmux.conf
@@ -18,6 +18,8 @@ set -g window-status-current-style fg="#c0caf5",bg="#292e42"
 set -g pane-border-style fg="#1f2335"
 set -g pane-active-border-style fg="#1f2335"
 
+set -g mode-style bg="#273644",fg="#4c9e8a"
+
 # emacs-like pane controls
 bind 0 killp
 bind 1 resize-pane -Z
