--- a/tmux.conf
+++ b/tmux.conf
@@ -3,20 +3,27 @@ set -g prefix C-t
 bind C-t send-prefix
 
 # ui
-set -g status-style bg="#1f2335",fg="#565f89"
+set -g status-style bg="#1f2335"
+set -g status-left-style fg="#313750"
+set -g status-right-style fg="#313750"
+set -g status-left-style fg="#7892bf"
+set -g status-right-style fg="#7892bf"
 set -g status-left-length 40
 set -g status-left "   [#S]  "
 set -g status-right-length 40
-set -g status-right '#[bg=default,fg=default] 󱑍 #(TZ="UTC" date +%%a,\ %%b\ %%d\ %%H:%%M\ \(%%Z\)) '
+set -g status-right "󱑍 %A %D %I:%M %p " # e.g. Friday 07/21/23 08:34 PM
 set -g status-justify left
 
 set -g window-status-format '  #I | #W '
-set -g window-status-style fg="#313750"
+set -g window-status-style fg="#565f89"
 set -g window-status-current-format '  #I | #W #F '
-set -g window-status-current-style fg="#c0caf5",bg="#292e42"
+# set -g window-status-current-style fg="#c0caf5",bg="#292e42"
+set -g window-status-current-style fg="#c0caf5",bg="#31374e"
+set -g window-status-current-style bg="#2d3348",fg="#c0caf5"
+# set -g window-status-current-style bg="#2d3348",fg="#7892bf"
 
-set -g pane-border-style fg="#1f2335"
-set -g pane-active-border-style fg="#1f2335"
+set -g pane-border-style fg="#313750"
+set -g pane-active-border-style fg="#313750"
 
 set -g mode-style bg="#273644",fg="#4c9e8a"
 
