org improvements; misc

--- a/tmux.conf
+++ b/tmux.conf
@@ -3,11 +3,14 @@ set -g prefix C-t
 bind C-t send-prefix
 
 # ui
-set -g status-style bg="#1f2335"
+# set -g status-style bg="#1f2335"
+set -g status-style bg="#1c2030"
 set -g status-left-style fg="#313750"
 set -g status-right-style fg="#313750"
 set -g status-left-style fg="#7892bf"
 set -g status-right-style fg="#7892bf"
+set -g status-left-style fg="#313750"
+set -g status-right-style fg="#313750"
 set -g status-left-length 40
 set -g status-left "   [#S]  "
 set -g status-right-length 40
