--- a/tmux.conf
+++ b/tmux.conf
@@ -5,7 +5,10 @@ bind C-t send-prefix
 # ui
 set -g mode-style bg="#273644",fg="#4c9e8a" # selection
 set -g pane-border-style fg="#313750"
+set -g pane-active-border-style fg="#313750"
 set -g status-justify centre
+set -g status-left ""
+set -g status-right ""
 set -g status-style bg="#1a1e2d"
 set -g window-status-current-format ' [#I]  #W #F '
 set -g window-status-current-style bg="#2f354b",fg="#c0caf5"
